assets/css/styles.css
/* ... */
@media screen and (min-width: 768px) {
    .container{
        margin-left: auto;
        margin-right: auto;
    }

    body{
        margin: 0;
    }
    .section{
        padding: 6rem 0 2rem;
    }
    .section_subtitle{
        margin-bottom: 4rem;
    }

    .header{
        top: 0;
        bottom: initial;
  }

  .header,
  .main,
  .footer_container{
      padding: 0 1rem;
  }
  .nav{
      height: calc(var(--header-height) + 1.5rem);
      column-gap: 1rem;
  }
  .nav_icon,
  .nav_close,
  .nav_toggle{
      display: none;
  }
  .nav_list{
      display: flex;
      column-gap: 2rem;
  }
  .nav_menu{
      margin-left:  auto;
  }
  .change-theme{
      margin: 0;
  }
  .home_container{
      row-gap: 5rem;
  }
  .home_content{
      padding-top: 5.5rem;
      column-gap: 2rem;
  }
  .home_blob{
      width: 270px;
  }
  .home_scroll{
      display: block;
  }
  .home_scroll-button{
      margin-left: 3rem;
  }
  .about_container{
      column-gap: 5rem;
  }
  .about_img{
      width: 450px;
      align-self: start;
      padding-top: 20%;
  }
  .about_discription{
      text-align: initial;
  }
  .about_info{
      justify-content: space-between;
  }
  .about_buttons{
      justify-content: initial;
  }

  .qualification_tabs{
      justify-content: center;
  }
  .qualification_button{
      margin: 0 var(--mb-1);
  }
  .qualification_sections{
      grid-template-columns: .5fr;
  }

  .services_container{
      grid-template-columns: repeat(3,218px);
      justify-content: center;
  }
  .services_icon{
      font-size: 2rem;
  }
  .services_content{
      padding: 6rem 0 2rem 2.5rem;
  }

  .services_modal-content{
      width: 450px;
  }
  .portfolio_img{
      width: 320px;
  }
  .portfolio_content{
      align-items: center;
  }
  .project{
      text-align: initial;
  }
  .project_bg{
      background: none;
  }
  .project_container{
      background-color: var(--first-color-second);
      border-radius: 1rem;
      padding: 3rem 2.5rem 0;
      grid-template-columns: 1fr max-content;
      column-gap: 3rem;
  }
  .project_date{
      padding-top: .8rem;
  }

  .footer_container{
      grid-template-columns: repeat(3,1fr);
  }
  .footer_bg{
      padding: 3rem 0 3.5rem;
  }
  .footer_links{
      flex-direction: row;
      column-gap: 2rem;
  }
  .footer_socials{
      justify-self: flex-end;
  }
  .footer_copy{
      margin-top: 4.5rem;
  }
}   

/* For large devices */
@media screen and (min_width: 1024px) {
    .header,
    .main,
    .footer_container{
        padding: 0;
    }

    .home_blob{
        width: 320px
    }
    
    .home_social{
        transform: translateX(-6rem);
    }
    .services_container{
        grid-template-columns: repeat(3,238px);
    }

    .portfolio_content{
        column-gap: 5rem;
    }
    .swiper-portfolio-icon{
        font-size: 3.5rem;
    }
    .swiper-button-next{
        right: -3.5rem;
    }
    .swiper-button-prev{
        left: -3.5rem;
    }
    .swiper-container-horizontal > .swiper-pagination-bullets{
        bottom: -4.5rem;
    }

    .contact_form{
        width: 460px
    }
    .contact_input{
      grid-template-columns: repeat(2,1fr);  
    }
}

